@@ -8,7 +8,8 @@
   - DEPRECATE DBIx::Custom AUTOLOAD feature is DEPRECATED!
   - DEPRECATE DBIx::Custom::Model AUTOLOAD feature is DEPRECATED!
   - DBIx::Custom::update_or_insert method is DEPRECATED!
-  
+  - DBIx::Custom::count method is DEPRECATED!
+
 0.38 2017-3-18
   ---------------------------------------------------
   NOTE: This release remove many DEPRECATED features. 
